kube/redis_http_server/redishttp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["192.168.50.53","192.168.50.56","192.168.50.57"],"port":80,"protocol":"HTTP","serviceName":"llama:redisserverlesshttp","ingressName":"llama:redishttp","hostname":"userdb-redis.endeavour.cs.vt.edu","path":"/","allNodes":false}]
  creationTimestamp: '2024-03-07T05:40:12Z'
  generation: 1
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/publicEndpoints: {}
        f:spec:
          f:rules: {}
      manager: agent
      operation: Update
      time: '2024-03-11T14:00:16Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: nginx-ingress-controller
      operation: Update
      subresource: status
      time: '2024-03-11T14:00:16Z'
  name: redishttp
  namespace: llama
  resourceVersion: '295665027'
  uid: edaa8852-cce9-4d7a-8cda-828fe044703f
spec:
  rules:
    - host: userdb-redis.endeavour.cs.vt.edu
      http:
        paths:
          - backend:
              service:
                name: redisserverlesshttp
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 192.168.50.53
      - ip: 192.168.50.56
      - ip: 192.168.50.57
